# Jaculus-dcore

./: .gitignore  404.html  CMakeLists.txt  CNAME  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: cmake.yml  docs.yml
assets/.doxy/doxygen/: hashChanges.yaml
assets/.doxy/doxygen/doxygen/: annotated.md  class_member_enums.md  class_member_functions.md  class_member_typedefs.md  class_member_variables.md  class_members.md  classes.md  classjac_1_1Controller.md  classjac_1_1Device.md  classjac_1_1KeyValueFeature.md  classjac_1_1KeyValueNamespace.md  classjac_1_1LinkReadable.md  classjac_1_1LinkWritable.md  classjac_1_1MachineCtrl.md  classjac_1_1Sha1Hasher.md  classjac_1_1Timeout.md  classjac_1_1TimeoutLock.md  classjac_1_1Uploader.md  controller_8cpp.md  controller_8cpp_source.md  controller_8h.md  controller_8h_source.md  device_8h.md  device_8h_source.md  dir_256037ad7d0c306238e2bc4f945d341d.md  dir_5f36e4b8294e45bcbbea85a29a4cc9c0.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  dir_6f95e06b732314161804ab1ef73c9681.md  dir_7dcf813d97a5be213fa89559baaee677.md  dir_8745a1fa89e3088deda48338e7669502.md  files.md  functions.md  hierarchy.md  keyvalueFeature_8h.md  keyvalueFeature_8h_source.md  keyvalue_8h.md  keyvalue_8h_source.md  linkIo_8h.md  linkIo_8h_source.md  lock_8h.md  (+27 more)
assets/.doxy/doxygen/xml/: Doxyfile.xml  classjac_1_1Controller.xml  classjac_1_1Device.xml  classjac_1_1KeyValueFeature.xml  classjac_1_1KeyValueNamespace.xml  classjac_1_1LinkReadable.xml  classjac_1_1LinkWritable.xml  classjac_1_1MachineCtrl.xml  classjac_1_1Sha1Hasher.xml  classjac_1_1Timeout.xml  classjac_1_1TimeoutLock.xml  classjac_1_1Uploader.xml  controller_8cpp.xml  controller_8h.xml  device_8h.xml  dir_256037ad7d0c306238e2bc4f945d341d.xml  dir_5f36e4b8294e45bcbbea85a29a4cc9c0.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6f95e06b732314161804ab1ef73c9681.xml  dir_7dcf813d97a5be213fa89559baaee677.xml  dir_8745a1fa89e3088deda48338e7669502.xml  index.xml  keyvalueFeature_8h.xml  keyvalue_8h.xml  linkIo_8h.xml  lock_8h.xml  logger_8cpp.xml  logger_8h.xml  machineCtrl_8h.xml  namespacejac.xml  namespacejac_1_1ProtoBuilder.xml  sha1_8h.xml  structjac_1_1Device_1_1MachineIO.xml  structjac_1_1KeyValueNamespaceProtoBuilder.xml  structjac_1_1Logger.xml  structmbedtls__sha1__context.xml  timeout_8h.xml  uploader_8cpp.xml  uploader_8h.xml
docs/: CNAME  getting-started.md  index.md  troubleshooting.md
doxygen/annotated/: index.html
doxygen/class_member_enums/: index.html
doxygen/class_member_functions/: index.html
doxygen/class_member_typedefs/: index.html
doxygen/class_member_variables/: index.html
doxygen/class_members/: index.html
doxygen/classes/: index.html
doxygen/classjac_1_1Controller/: index.html
doxygen/classjac_1_1Device/: index.html
doxygen/classjac_1_1KeyValueFeature/: index.html
doxygen/classjac_1_1KeyValueNamespace/: index.html
doxygen/classjac_1_1LinkReadable/: index.html
doxygen/classjac_1_1LinkWritable/: index.html
doxygen/classjac_1_1MachineCtrl/: index.html
doxygen/classjac_1_1Sha1Hasher/: index.html
doxygen/classjac_1_1Timeout/: index.html
doxygen/classjac_1_1TimeoutLock/: index.html
doxygen/classjac_1_1Uploader/: index.html
doxygen/controller_8cpp/: index.html
doxygen/controller_8cpp_source/: index.html
doxygen/controller_8h/: index.html
doxygen/controller_8h_source/: index.html
doxygen/device_8h/: index.html
doxygen/device_8h_source/: index.html
doxygen/dir_256037ad7d0c306238e2bc4f945d341d/: index.html
doxygen/dir_5f36e4b8294e45bcbbea85a29a4cc9c0/: index.html
doxygen/dir_68267d1309a1af8e8297ef4c3efbcdba/: index.html
doxygen/dir_6f95e06b732314161804ab1ef73c9681/: index.html
doxygen/dir_7dcf813d97a5be213fa89559baaee677/: index.html
doxygen/dir_8745a1fa89e3088deda48338e7669502/: index.html
doxygen/files/: index.html
doxygen/functions/: index.html
doxygen/hierarchy/: index.html
doxygen/keyvalueFeature_8h/: index.html
doxygen/keyvalueFeature_8h_source/: index.html
doxygen/keyvalue_8h/: index.html
doxygen/keyvalue_8h_source/: index.html
doxygen/linkIo_8h/: index.html
doxygen/linkIo_8h_source/: index.html
doxygen/links/: index.html
doxygen/lock_8h/: index.html
doxygen/lock_8h_source/: index.html
doxygen/logger_8cpp/: index.html
doxygen/logger_8cpp_source/: index.html
doxygen/logger_8h/: index.html
doxygen/logger_8h_source/: index.html
doxygen/machineCtrl_8h/: index.html
doxygen/machineCtrl_8h_source/: index.html
doxygen/macros/: index.html
doxygen/modules/: index.html
doxygen/namespace_member_enums/: index.html
doxygen/namespace_member_functions/: index.html
doxygen/namespace_member_typedefs/: index.html
doxygen/namespace_member_variables/: index.html
doxygen/namespace_members/: index.html
doxygen/namespacejac/: index.html
doxygen/namespacejac_1_1ProtoBuilder/: index.html
doxygen/namespaces/: index.html
doxygen/pages/: index.html
doxygen/sha1_8h/: index.html
doxygen/sha1_8h_source/: index.html
doxygen/structjac_1_1Device_1_1MachineIO/: index.html
doxygen/structjac_1_1KeyValueNamespaceProtoBuilder/: index.html
doxygen/structjac_1_1Logger/: index.html
doxygen/structmbedtls__sha1__context/: index.html
doxygen/timeout_8h/: index.html
doxygen/timeout_8h_source/: index.html
doxygen/uploader_8cpp/: index.html
doxygen/uploader_8cpp_source/: index.html
doxygen/uploader_8h/: index.html
doxygen/uploader_8h_source/: index.html
doxygen/variables/: index.html
getting-started/: index.html
search/: search_index.json
src/: CMakeLists.txt  idf_component.yml
src/jac/device/: controller.cpp  controller.h  device.h  keyvalue.h  lock.h  timeout.h  uploader.cpp  uploader.h
src/jac/device/util/: lock.h  machineCtrl.h  sha1.c  sha1.h  timeout.h
src/jac/features/: keyvalueFeature.h  linkIoFeature.h
src/jac/features/util/: linkIo.h
tests/: CMakeLists.txt  main.cpp  resources.cmake  resources.cpp.in  resources.h  resources_test.cpp  util.h
tests/test_files/code/: index.js
troubleshooting/: index.html
